docs: 新增场景实战目录并重组工程与消息章节
- 新增 docs/scenarios/ 场景实战目录，聚合缓存、并发、消息、数据访问、综合案例五类场景
- 从 redis/rabbitmq/postgresql/elasticsearch 迁移场景与模式章节至 scenarios
- 重组 engineering 目录：09-practice 拆分并入 architecture 与 engineering-practices
- 清理 rabbitmq 消息模式与 spring-integration 重复章节，改为索引链接
- 精简冗余 Java 示例，更新跨文档引用与章节编号